# SkyReels-V2-MCP

./: .gitignore  README.md  README_zh.md  client.py  df_generator.py  install.sh  pyproject.toml  server.py  video_generator.py
