[project]
name = "skyreels-v2-mcp-private"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.13",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.0",
    "filelock==3.18.0",
    "fsspec==2025.3.2",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "packaging==25.0",
    "pip==25.1.1",
    "setuptools==59.6.0",
    "sympy==1.14.0",
    "torch==2.7.0",
    "triton==3.3.0",
    "typing-extensions==4.13.2",
    "wheel==0.45.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "imageio>=2.37.0",
    "diffusers>=0.33.1",
    "moviepy==1.0.3",
    "einops==0.8.1",
    "torchvision>=0.22.0",
    "ftfy>=6.3.1",
    "transformers>=4.51.3",
    "xfuser>=0.4.3.post3",
    "decord>=0.6.0",
    "psutil>=7.0.0",
]
